1.8.0 - ???
  - Lens changes/additions
    * Tmpfiles: parse 'q'/'Q' modes, parse two-character arguments,
                parse three-digit file modes
    * Xml: support external entity declarations in the doctype (Issue #142)

1.7.0 - 2016-11-08
  - General changes/additions
    * allow multiple transforms handling the same file as long as they
      also use the same lens (reported by Rich Jones)
    * fix a use-after-free in recursive lenses when spans are
      enabled (Issue #397)
    * fix an illegal memory access during put that can be triggered by a
      lens of the form 'del ... | l1 . l2' when the put has to jump
      branches in the union (Issue #398)
    * a large number of fixes based on Coverity scanning and running with
      gcc's address sanitizer. None of the issues uncovered would have lead
      to particularly significant leaks (they were all on the order 100-200
      bytes) and often hard to trigger, but we now have proof that at least
      while running tests there are no leaks at all.
      See https://github.com/hercules-team/augeas/pull/405 for details.
    * The type checker now checks regexes that are involved in
      expressions. For example, it used to be possible to write 'let rx =
      /a/ | /b)/' and not get an error from the syntax checker, even though
      'let rx = /b)/' would result in an error. Such constructs are now
      checked properly. This new check might lead to errors in existing
      lenses, requiring that they be fixed.
  - Lens changes/additions
    * Cron_User: New lens to handle user crontab files in /var/spool/cron
    * Csv: fix failure to load lens on OpenBSD (Issue #396)
    * Grub: also look for UEFI grub files in /boot/efi/EFI/*/grub.conf
            (Rich Jones)
    * Opendkim: new lens for /etc/opendkim.conf (Craig Miskell)
    * Php: look for php.ini where Ubunto 16.04 puts it, too (Michael Wodniok)
    * Splunk: support Splunk Universal Forwarder and underscore-prefixed