@@ -75,3 +75,8 @@ AUGEAS_0.21.0 {
     global:
       aug_load_file;
 } AUGEAS_0.20.0;
+
+AUGEAS_0.22.0 {
+    global:
+      aug_source;
+} AUGEAS_0.21.0;
